Tests/Negative/RecursiveStructSize.mr
struct Node {
    var value: i32;
    var next: Node; // Error: Recursive struct 'Node' has infinite size (should be *Node)
}
